// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Anchor has to be rendered 1`] = `
.c0 {
  color: var(--c-text,);
  -webkit-transition: color 150ms ease-in-out;
  transition: color 150ms ease-in-out;
  outline: none;
}

.c0:hover {
  color: var(--c-text-hover,);
  cursor: pointer;
}

<a
  class="c0"
  href="https://www.test.com"
  rel="noopener noreferer"
  target="_blank"
>
  Anchor Label
</a>
`;

exports[`Anchor has to be rendered with proper styles by using a theme 1`] = `
.c0 {
  color: var(--c-text,#e5d3d8);
  -webkit-transition: color 150ms ease-in-out;
  transition: color 150ms ease-in-out;
  outline: none;
}

.c0:hover {
  color: var(--c-text-hover,#afcce9);
  cursor: pointer;
}

<a
  class="c0"
  href="https://www.test.com"
  rel="noopener noreferer"
  target="_blank"
>
  Anchor Label
</a>
`;
